<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Aktueller Account-Name -->
    <item
        android:id="@+id/menu_divider"
        android:title="@string/global_options"
        android:enabled="false"
        android:visible="true"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_current_account"
        android:title="Account: Name"
        android:orderInCategory="101"
        app:showAsAction="never"
        tools:ignore="HardcodedText" />

    <!-- Create Lobby -->
    <item
        android:id="@+id/menu_create_lobby"
        android:title="@string/create_lobby"
        android:orderInCategory="102"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_join_lobby"
        android:title="@string/join_lobby"
        android:orderInCategory="103"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_new_group"
        android:title="@string/new_group"
        android:orderInCategory="103"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_new_platform"
        android:title="@string/new_platform"
        android:orderInCategory="103"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_contact_list"
        android:title="@string/contacts"
        android:orderInCategory="104"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:orderInCategory="105"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        android:orderInCategory="106"
        app:showAsAction="never" />
</menu>
