<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_share_identity"
        android:title="@string/reveal_identity"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_block_contact"
        android:title="@string/block_contact"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_leave_chat"
        android:title="@string/leave_chat"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_invite_members"
        android:title="@string/invite_members"
        app:showAsAction="never" />
</menu>